fixed layout issues, added image carousel

--- a/src/app/layouts/base-page/base-page.component.scss
+++ b/src/app/layouts/base-page/base-page.component.scss
@@ -10,6 +10,8 @@
   justify-items: center;
   grid-column-gap: 50px;
   grid-row-gap: 50px;
+  grid-template-columns: 150px 1fr;
+  justify-items: stretch;
 }
 
 section {
