--- a/src/app/widgets/image-carousel/image-carousel.component.scss
+++ b/src/app/widgets/image-carousel/image-carousel.component.scss
@@ -3,7 +3,7 @@
     margin: auto;
 
     img {
-        height: 320px;
+        height: 200px;
         width: 200px;
         border: 1px solid black;
     }
